--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "mobx": "^6.13.1",
+    "mobx-persist-store": "^1.1.5",
     "mobx-react-lite": "^4.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -39,7 +40,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
