--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-asset": "~10.0.10",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
     "expo-font": "~12.0.9",
+    "expo-image": "~1.12.15",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-router": "~3.5.23",
@@ -30,6 +32,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "lodash": "^4.17.21",
     "mobx": "^6.13.1",
     "mobx-persist-store": "^1.1.5",
     "mobx-react-lite": "^4.0.7",
