--- a/app.json
+++ b/app.json
@@ -34,7 +34,12 @@
           "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
         }
       ],
-      "expo-asset"
+      [
+        "expo-asset",
+        {
+          "assets": ["./assets/images/weather/lightning.jpg"]
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
