--- a/app.json
+++ b/app.json
@@ -19,7 +19,12 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ],
+      "package": "com.trieu5903.niceweather"
     },
     "web": {
       "bundler": "metro",
@@ -37,7 +42,9 @@
       [
         "expo-asset",
         {
-          "assets": ["./assets/images/weather/cloud.jpg"]
+          "assets": [
+            "./assets/images/weather/cloud.jpg"
+          ]
         }
       ]
     ],
