--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-image": "~1.13.0",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
+    "expo-navigation-bar": "~3.0.7",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
@@ -39,14 +40,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-circular-progress": "^1.4.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-navigation-bar": "~3.0.7",
-    "expo-crypto": "~13.0.2"
+    "react-native-svg": "^15.7.1",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
