--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.7",
-    "expo": "~51.0.34",
+    "expo": "~51.0.36",
     "expo-asset": "~10.0.10",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
@@ -46,7 +46,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.7.1",
+    "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
