--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-device": "~6.0.2",
     "expo-font": "~12.0.9",
     "expo-image": "~1.13.0",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-navigation-bar": "~3.0.7",
@@ -42,6 +43,7 @@
     "react-native": "0.74.5",
     "react-native-circular-progress": "^1.4.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-gifted-charts": "^1.4.43",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
