--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
+    "@tanstack/query-async-storage-persister": "^5.59.0",
+    "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-query-persist-client": "^5.59.0",
     "axios": "^1.7.7",
-    "expo": "~51.0.36",
+    "expo": "~51.0.37",
     "expo-asset": "~10.0.10",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
@@ -53,6 +56,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@tanstack/eslint-plugin-query": "^5.59.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
