--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-charts": "^1.4.43",
     "react-native-paper": "^5.12.5",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-dev-client": "~4.0.28"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
