--- a/app.json
+++ b/app.json
@@ -42,9 +42,7 @@
       [
         "expo-asset",
         {
-          "assets": [
-            "./assets/images/weather/cloud.jpg"
-          ]
+          "assets": []
         }
       ]
     ],
