--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-menu/menu": "^1.1.3",
     "@react-navigation/native": "^6.0.2",
     "@tanstack/query-async-storage-persister": "^5.59.0",
     "@tanstack/react-query": "^5.59.0",
@@ -25,6 +26,7 @@
     "expo": "~51.0.37",
     "expo-asset": "~10.0.10",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.28",
     "expo-device": "~6.0.2",
     "expo-font": "~12.0.9",
     "expo-image": "~1.13.0",
@@ -53,8 +55,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
-    "react-native-web": "~0.19.10",
-    "expo-dev-client": "~4.0.28"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
