--- a/package.json
+++ b/package.json
@@ -46,15 +46,16 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-circular-progress": "^1.4.0",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-charts": "^1.4.43",
+    "react-native-pager-view": "6.3.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
-    "react-native-web": "~0.19.10",
-    "react-native-pager-view": "6.3.0"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
