feat: Multiple languges

--- a/app.json
+++ b/app.json
@@ -44,7 +44,8 @@
         {
           "assets": []
         }
-      ]
+      ],
+      "expo-localization"
     ],
     "experiments": {
       "typedRoutes": true
