--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-image": "~1.13.0",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
     "expo-location": "~17.0.1",
     "expo-navigation-bar": "~3.0.7",
     "expo-router": "~3.5.23",
@@ -38,12 +39,14 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "i18next": "^23.16.2",
     "lodash": "^4.17.21",
     "mobx": "^6.13.1",
     "mobx-persist-store": "^1.1.5",
     "mobx-react-lite": "^4.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^15.1.0",
     "react-native": "0.74.5",
     "react-native-circular-progress": "^1.4.0",
     "react-native-draggable-flatlist": "^4.0.1",
