feat: add weather hooks and API tests
Introduces extensive unit tests for weather-related hooks and APIs, including mocks for places and weather data. Refactors API error handling to throw errors instead of logging and returning null, removes unused response interceptors, and updates hook implementations for improved testability. Also fixes minor import issues, updates .gitignore to exclude coverage, and renames jest setup file for consistency.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "jest": {
     "preset": "jest-expo",
     "setupFiles": [
-      "./jest.setup.ts"
+      "./jest.setup.tsx"
     ]
   },
   "dependencies": {
