fix: cannot navigate to other weather place

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "preset": "jest-expo",
     "setupFiles": [
       "./jest.setup.tsx"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg|gifted-charts-core)"
     ]
   },
   "dependencies": {
@@ -79,5 +82,5 @@
     "typescript": "~5.3.3"
   },
   "private": true,
-  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
